--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <description>Allows to transfer settings from a pom to a job configuration</description>
+  <url>https://wiki.jenkins-ci.org/display/JENKINS/Pom2Config+Plugin</url>
 
   <developers>
     <developer>
