--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>pom2config</artifactId>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <description>Allows to transfer settings from a pom to a job configuration</description>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Pom2Config+Plugin</url>
